# pemsa-pinvoke

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  linux.yml  macos.yml  windows.yml
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: Pemsa.cs
Assets/Scripts/Pemsa/: EmulatorInput.cs  EmulatorInput.inputactions  PemsaAudio.cs  PemsaController.cs  PemsaGraphics.cs  PemsaInput.cs  PemsaLibrary.cs
ProjectSettings/: ProjectSettings.asset
VSProjects/customlua/: customlua.vcxproj  customlua.vcxproj.filters
VSProjects/fixmath/: fixmath.vcxproj  fixmath.vcxproj.filters
VSProjects/pemsa/: pemsa.vcxproj  pemsa.vcxproj.filters
VSProjects/pemsa_pinvoke/: dllmain.cpp  pch.h  pemsa_pinvoke.cpp  pemsa_pinvoke.h  pemsa_pinvoke.vcxproj  pemsa_pinvoke.vcxproj.filters  pinvoke_audio_backend.cpp  pinvoke_audio_backend.h  pinvoke_graphics_backend.cpp  pinvoke_graphics_backend.h  pinvoke_input_backend.cpp  pinvoke_input_backend.h
include/: pemsa_common.h  pemsa_pinvoke.h  pinvoke_audio_backend.h  pinvoke_graphics_backend.h  pinvoke_input_backend.h
src/: pemsa_pinvoke.cpp  pinvoke_audio_backend.cpp  pinvoke_graphics_backend.cpp  pinvoke_input_backend.cpp
